Make base template more generic and make it configurable.

--- a/payline/templates/payline/wallet_detail.html
+++ b/payline/templates/payline/wallet_detail.html
@@ -1,4 +1,4 @@
-{% extends "cloud/account.html" %}
+{% extends base_template|default:"base.html" %}
 {% load i18n %}
 
 {% block title %}{% trans "Enterprise account page: Payment details" %}{% endblock %}
